# alerter_rs

./: .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs  integration-tests.sh
.claude/: settings.json
.claude/hooks/: spray-bottle.sh
.tickets/: ar-04o3.md  ar-13s6.md  ar-2n0x.md  ar-2tkz.md  ar-3atw.md  ar-3cx9.md  ar-3xkd.md  ar-41o5.md  ar-540c.md  ar-635n.md  ar-6m5u.md  ar-6so5.md  ar-6upb.md  ar-7nun.md  ar-8a8g.md  ar-95l6.md  ar-9651.md  ar-9c2j.md  ar-9w5w.md  ar-9x4w.md  ar-eik9.md  ar-erxo.md  ar-fyd4.md  ar-hdbe.md  ar-hdm0.md  ar-hjra.md  ar-id6v.md  ar-j4gs.md  ar-jfpu.md  ar-k5ub.md  ar-kv7u.md  ar-lo8q.md  ar-lyth.md  ar-msui.md  ar-o9d2.md  ar-pkht.md  ar-qkjd.md  ar-qy52.md  ar-s7vk.md  ar-trle.md  (+11 more)
examples/: showcase.rs
openspec/changes/alerter-swift-wrapper/: design.md  tasks.md
openspec/changes/archive/2026-03-07-alerter-swift-wrapper/: proposal.md  tasks.md
openspec/changes/archive/2026-03-08-example-binary-and-integration-tests/: design.md  proposal.md  tasks.md
openspec/specs/binary-bundling/: spec.md
openspec/specs/notification-management/: spec.md
openspec/specs/notification-sending/: spec.md
src/: alerter.rs  binary.rs  error.rs  handle.rs  lib.rs  response.rs
tests/: api_surface_tests.rs  binary_tests.rs  builder_tests.rs  integration_script_content_test.rs  integration_script_test.rs  management_tests.rs  mock_alerter.sh  send_async_tests.rs  send_tests.rs  showcase_api_test.rs  showcase_compile_test.rs  showcase_interactive_test.rs  showcase_notifications_test.rs  showcase_usage_test.rs
(+9 files in other folders)
